<resources>
    <string name="btn_header_bar_cancel">取消</string>
    <string name="btn_header_bar_publish">发表</string>
    <string name="btn_header_bar_next">下一步</string>
    <string name="title_add_themes">添加最多5个主题</string>
    <string name="write_post">说一说</string>
    <string name="acc_home_function_list">Open Function List</string>
    <string name="acc_mblog_item_menu">Menu Button</string>
    <string name="acc_more_oper_button">More Operation Button</string>
    <string name="acc_author">Author</string>
    <string name="acc_send_time">Publish Time</string>
    <string name="acc_favorite">Favorite</string>
    <string name="acc_timeline_top_ad">Advertisement</string>
    <string name="acc_open_publish_panel">Open Publish Panel</string>
    <string name="acc_close_publish_panel">Close Publish Panel</string>
    <string name="acc_back">Back</string>
    <string name="acc_serach">Search</string>
    <string name="acc_more_oper">More Operation</string>
    <string name="acc_loading">Loading</string>
    <string name="acc_portrait">Portrait</string>
    <string name="msp_str_null" />
    <string name="msp_app_name">支付宝快捷支付服务</string>
    <string name="msp_error_title_default">提示</string>
    <string name="msp_action_settings">设置</string>
    <string name="msp_xlistview_header_hint_normal">下拉刷新</string>
    <string name="msp_xlistview_header_last_time">上次更新时间：</string>
    <string name="msp_xlistview_footer_hint_normal">查看更多</string>
    <string name="msp_close">关闭</string>
    <string name="msp_memo_user_cancel">操作已经取消。</string>
    <string name="msp_memo_app_cancel">程序或者数据出现问题。</string>
    <string name="msp_memo_server_cancel">系统繁忙，请稍后再试。</string>
    <string name="msp_memo_repeat_pay">同一订单禁止同时多次支付。</string>
    <string name="msp_mini_safty_code_info">安全码是打印在信用卡背面签名区的一组数字，一般是后3位或后4位数字</string>
    <string name="msp_mini_safty_code_title">安全码说明</string>
    <string name="msp_mini_read_protocal_title">选择阅读协议</string>
    <string name="msp_mini_choose_identitify">选择证件类别</string>
    <string name="msp_mini_card_type_text">卡类型</string>
    <string name="confirm_title">提示</string>
    <string name="cardUnbing">解除绑定</string>
    <string name="cardDefaultuse">默认使用该卡支付</string>
    <string name="cardCancle">取消</string>
    <string name="com_facebook_loginview_log_out_button">Logout Facebook</string>
    <string name="com_facebook_loginview_log_in_button">Login with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="market_sng_server_error">Failed to get data.Please try again</string>
    <string name="market_sng_detail_title">Details</string>
    <string name="market_sng_messagedetail_title">Message Details</string>
    <string name="market_sng_detail_play">%1$s%1$splaying</string>
    <string name="market_sng_detail_gameintro">Abstract</string>
    <string name="market_sng_detail_friendrank">Friends</string>
    <string name="market_sng_detail_intro">Details</string>
    <string name="market_sng_game_center">GameCenter</string>
    <string name="market_sng_rank_play">%1$splaying！</string>
    <string name="market_sng_rank_more">Click to load more</string>
    <string name="market_sng_rank_loadding">loading...</string>
    <string name="market_sng_rank_complete">More ranking within the game</string>
    <string name="market_sng_rank_retry">Failure.Pull down again</string>
    <string name="market_sng_rank_empty">No Ranking</string>
    <string name="market_sng_gamemanager_notice">Receive Messages</string>
    <string name="market_sng_gamemanager">GameManagement</string>
    <string name="market_sng_gamemanager_empty">"You haven't played any games"</string>
    <string name="market_sng_message_empty">No Message</string>
    <string name="market_look_fans">followed and following</string>
    <string name="market_message_num">%1$dMessages</string>
    <string name="market_message_new">Load earlier message</string>
    <string name="market_sng_msg_deleting">Succeed</string>
    <string name="market_sng_msg_deleting_notice">Sured to empty it?</string>
    <string name="market_sng_msg_new">You have messages···</string>
    <string name="market_sng_btn_startgame">Start</string>
    <string name="market_sng_category_downloaded">Downloaded Games</string>
    <string name="market_sng_category_undownload">Not Downloaded Games</string>
    <string name="market_sng_menu_gamemanager">GameManagement</string>
    <string name="market_sng_menu_messagelist">MessageList</string>
    <string name="market_sng_link_oldversion">Older GameCenter</string>
    <string name="market_sng_gameitem_rank">No.%1$s</string>
    <string name="market_sng_allword_player">Playing with you in the world</string>
    <string name="market_sng_friend_player">Ranking</string>
    <string name="market_sng_download_error">download error,please retry</string>
    <string name="market_sng_more_game">more game</string>
    <string name="market_sng_activity_hot">hot activity</string>
    <string name="market_sng_activity_more">more ></string>
    <string name="market_sng_msg_reciverd_gift">friend gift</string>
    <string name="market_sng_msg_reciverd_visite">friend invite</string>
    <string name="market_sng_main_tab1">Recommend</string>
    <string name="market_sng_main_tab2">Ranking</string>
    <string name="market_sng_main_tab3">Classification</string>
    <string name="market_sng_main_tab4">Search</string>
    <string name="market_sng_main_seemore">More</string>
    <string name="market_sng_main_meesage_new">%1$d new message</string>
    <string name="market_sng_main_activity_more">More</string>
    <string name="market_sng_main_msg_system">the new message~</string>
    <string name="market_sng_load_more">Loading...</string>
    <string name="market_sng_load_more_error">Load failed, please try again</string>
    <string name="market_sng_load_more_complete">Pro, is the last page~</string>
    <string name="market_sng_download_error_v2">%1$sDownload error, please try again</string>
    <string name="market_sng_search_editbox_hint">Please enter your search of game</string>
    <string name="market_sng_search_editbox_search">Search</string>
    <string name="market_sng_search_editbox_cancel">Cancel</string>
    <string name="market_sng_search_keyword_everybody">Everyone in the search</string>
    <string name="market_sng_search_no_result1">"Pro, didn't find the game you want,"</string>
    <string name="market_sng_search_no_result2">Try search other games!</string>
    <string name="market_sng_search_null_keyword_hint">Pro,Has yet to enter the game name</string>
    <string name="market_sng_giftbag_title">Active package</string>
    <string name="market_sng_giftbag_for_game_title">Package area</string>
    <string name="market_sng_giftbag_category_event">Activities</string>
    <string name="market_sng_giftbag_category_giftbag">Package</string>
    <string name="market_sng_giftbag_jion">Join</string>
    <string name="market_sng_giftbag_accept">Receive</string>
    <string name="market_sng_giftbag_check">See</string>
    <string name="market_sng_giftbag_no_rest">Brought out</string>
    <string name="market_sng_giftbag_expired">Expired</string>
    <string name="market_sng_giftbag_remaining_percent">Surplus%d%%</string>
    <string name="market_sng_giftbag_dlg_jion_succes_title">Participate in the success</string>
    <string name="market_sng_giftbag_dlg_jion_succes_content">"pro, the gift has been sent to the game, 
 quickly into the game to see!"</string>
    <string name="market_sng_giftbag_dlg_accept_succes_title">Get the success</string>
    <string name="market_sng_giftbag_dlg_accept_succes_content">Activation code：%s</string>
    <string name="market_sng_giftbag_dlg_check_title">Check</string>
    <string name="market_sng_giftbag_dlg_accept_failed_error_tips">Pro, get failure, to try it again later</string>
    <string name="market_sng_giftbag_dlg_accept_failed_no_remaining_tips">pro, the gift bag has been gone, oh come earlier next time</string>
    <string name="market_sng_giftbag_dlg_accept_failed_not_exist_tips">Pro, get failure, gift bag not exist</string>
    <string name="market_sng_giftbag_dlg_btn_copy">use</string>
    <string name="market_sng_giftbag_dlg_btn_close">Close</string>
    <string name="market_sng_giftbag_dlg_btn_open">Open the game</string>
    <string name="market_sng_giftbag_dlg_network3g_btn_ok">Determine</string>
    <string name="market_sng_giftbag_dlg_network3g_btn_cancel">Cancel</string>
    <string name="market_sng_giftbag_dlg_network3g_content">The current is not wifi network status, whether to download games?</string>
    <string name="market_sng_giftbag_dlg_notyettime_title">Warm prompt</string>
    <string name="market_sng_giftbag_dlg_notyettime_content"><Data>Before the time, please in time to receive the following led number：&lt;br>The start time：&lt;font color=#00a2ff>&lt;b>%1$s&lt;/b>&lt;/font>&lt;br>The end of time：&lt;font color=#00a2ff>&lt;b>%2$s&lt;/b>&lt;/font></Data></string>
    <string name="market_sng_giftbag_dlg_loadding">Loading..</string>
    <string name="market_sng_gift_detail_title">Package Detail</string>
    <string name="market_sng_gift_detail_time">For the time</string>
    <string name="market_sng_gift_detail_content">Package contents</string>
    <string name="market_sng_gift_detail_usetag">Method of use</string>
    <string name="market_sng_gift_detail_usetime">Use time</string>
    <string name="market_sng_gift_get_time">"Start time: %1$s
The end time: %2$s"</string>
    <string name="market_sng_gift_get_deadline">Deadline %1$s</string>
    <string name="market_sng_gift_use_time">%1$sTo%2$s</string>
    <string name="market_sng_gift_take">Receive</string>
    <string name="market_sng_gift_take_timeout">Has expired</string>
    <string name="market_sng_gift_take_get">See</string>
    <string name="menu_settings">Settings</string>
    <string name="exit">Log Out</string>
    <string name="ok">OK</string>
    <string name="account_regist">Sign Up</string>
    <string name="skin_menu_night">Night Mode</string>
    <string name="new_regist_phone_num">Please enter your phone number</string>
    <string name="new_regist_password">Please set a password</string>
    <string name="new_regist_verification_code_content">"Your phone %s 
 will receive a SMS containing a 6-digit verification code"</string>
    <string name="new_regist_input_code">Enter the verification code</string>
    <string name="new_regist_notice">By registering, you hereby agree to Weibo Online Service Agreement and Privacy Policy</string>
    <string name="register_phone_num_input_tips">Please input 11 digist phone num</string>
</resources>