<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/main_feed_background_color">

    <include
        layout="@layout/visitor_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <include layout="@layout/common_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_feed_background_color"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@id/tv_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0dip"
            android:layout_marginTop="@dimen/new_regist_verify_margin_top_tx"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/new_regist_verify_line_space_tx"
            android:paddingLeft="12.0dip"
            android:text="@string/new_regist_verification_code_content"
            android:textColor="@color/main_content_subtitle_text_color"
            android:textSize="13.0sp" />

        <LinearLayout
            android:id="@+id/ll_verify_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_top_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/new_regist_height"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/new_regist_input_code"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingLeft="12.0dip"
                android:singleLine="true"
                android:textColor="@color/search_input_text"
                android:textColorHint="@color/empty_view_text_color"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/btn_resend_verify_code"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:paddingBottom="5.0dip"
                android:paddingTop="5.0dip"
                android:singleLine="true"
                android:layout_marginRight="6dp"
                android:text="获取验证码"
                android:background="@drawable/common_button_big_orange_bg"
                android:textColor="@color/main_button_disabled_text_color_for_light_color_button"
                android:textSize="14.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_top_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/new_regist_height_et"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/new_regist_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/new_regist_user_padding_left"
                android:singleLine="true"
                android:textColor="@color/search_input_text"
                android:textColorHint="@color/empty_view_text_color"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@id/regist_password_clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:padding="7.0dip"
                android:paddingLeft="12.0dip"
                android:paddingRight="12.0dip"
                android:scaleType="fitCenter"
                android:src="@drawable/login_clear_btn"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_top_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_true_name"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/new_regist_height_et"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="真实姓名"
                android:inputType="text"
                android:paddingLeft="@dimen/new_regist_user_padding_left"
                android:singleLine="true"
                android:textColor="@color/search_input_text"
                android:textColorHint="@color/empty_view_text_color"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@+id/iv_true_name_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="7.0dip"
                android:paddingLeft="12.0dip"
                android:paddingRight="12.0dip"
                android:scaleType="fitCenter"
                android:src="@drawable/login_clear_btn"
                android:visibility="gone" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_register_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/rb_worker"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:button="@drawable/radio_selector"
                android:text="我是职场人"/>

            <RadioButton
                android:id="@+id/rb_student"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:button="@drawable/radio_selector"
                android:text="我是学生"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/ll_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_top_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_industry"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_regist_height_et"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="行业/副行业"
                android:inputType="text"
                android:paddingLeft="@dimen/new_regist_user_padding_left"
                android:singleLine="true"
                android:textColor="@color/search_input_text"
                android:textColorHint="@color/empty_view_text_color"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_top_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <AutoCompleteTextView
                android:id="@+id/tv_school"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_regist_height_et"
                android:background="@null"
                android:gravity="center_vertical"
                android:completionThreshold="1"
                android:hint="学校"
                android:inputType="text"
                android:paddingLeft="@dimen/new_regist_user_padding_left"
                android:singleLine="true"
                android:textColor="@color/search_input_text"
                android:textColorHint="@color/empty_view_text_color"
                android:textSize="16.0sp" />
        </LinearLayout>

        <TextView
            android:id="@id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="15.0dip"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingLeft="10.0dip"
            android:textColor="@color/main_highlight_text_color"
            android:textSize="14.0sp"
            android:visibility="gone" />

        <Button
            android:id="@id/confirm_bt"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/new_regist_height_bt"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/common_button_big_orange_bg"
            android:text="@string/ok"
            android:textColor="@color/main_button_disabled_text_color_for_light_color_button"
            android:textSize="17.0sp" />
    </LinearLayout>

</LinearLayout>